[gd_scene load_steps=20 format=2]

[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/sky.png" type="Texture" id=1]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/cloud_LG.png" type="Texture" id=2]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/ground.png" type="Texture" id=3]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/mountains.png" type="Texture" id=4]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/pinwheel.png" type="Texture" id=5]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/cloud_SM.png" type="Texture" id=6]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/cloud_MD.png" type="Texture" id=7]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/eden_menu_header.png" type="Texture" id=8]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/delete_world.png" type="Texture" id=9]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/create_world.png" type="Texture" id=10]
[ext_resource path="res://src/scripts/interface/eden1/background.gd" type="Script" id=11]
[ext_resource path="res://src/scripts/interface/eden1/foreground.gd" type="Script" id=12]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/arrow_left.png" type="Texture" id=13]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/arrow_right.png" type="Texture" id=14]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/options.png" type="Texture" id=15]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/share_world.png" type="Texture" id=16]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/load_world.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "PinWheel"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PinWheel:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 284, 83 )
margin_right = 50.0

[node name="Eden1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PinWheel" type="TextureRect" parent="Background"]
modulate = Color( 1, 1, 1, 0.0784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1440.0
margin_top = -996.833
margin_right = 1440.0
margin_bottom = 1883.17
rect_rotation = 279.066
rect_pivot_offset = Vector2( 1440, 1440 )
texture = ExtResource( 5 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="Node2D" parent="Background"]
position = Vector2( -209.854, 419.395 )

[node name="CloudTop" type="Node2D" parent="Background/Clouds"]
position = Vector2( 149.892, -477.946 )

[node name="CloudLG" type="CPUParticles2D" parent="Background/Clouds/CloudTop"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 5.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudMD" type="CPUParticles2D" parent="Background/Clouds/CloudTop"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 7 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 5.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudSM" type="CPUParticles2D" parent="Background/Clouds/CloudTop"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 5.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudBottom" type="Node2D" parent="Background/Clouds"]

[node name="CloudLG" type="CPUParticles2D" parent="Background/Clouds/CloudBottom"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 5.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudMD" type="CPUParticles2D" parent="Background/Clouds/CloudBottom"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 7 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 5.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudSM" type="CPUParticles2D" parent="Background/Clouds/CloudBottom"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 5.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="Ground" type="Node2D" parent="Background"]

[node name="Mountians" type="CPUParticles2D" parent="Background/Ground"]
position = Vector2( 0, -199.179 )
scale = Vector2( 3, 3 )
amount = 7
lifetime = 300.0
preprocess = 500.0
texture = ExtResource( 4 )
direction = Vector2( 10, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
hue_variation = 0.08
hue_variation_random = 0.32
__meta__ = {
"_editor_description_": ""
}

[node name="Grass" type="CPUParticles2D" parent="Background/Ground"]
position = Vector2( 0, -34.789 )
scale = Vector2( 3, 3 )
amount = 7
lifetime = 300.0
preprocess = 500.0
texture = ExtResource( 3 )
direction = Vector2( 10, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
hue_variation = 0.08
hue_variation_random = 0.32
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/PinWheel = SubResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTop" type="HBoxContainer" parent="VBox"]
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="Center" type="CenterContainer" parent="VBox/HBoxTop"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="Delete" type="TextureButton" parent="VBox/HBoxTop/Center"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="VBox/HBoxTop"]
margin_left = 204.0
margin_right = 656.0
margin_bottom = 200.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBox/HBoxTop"]
margin_left = 660.0
margin_right = 1260.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 0 )
custom_styles/pressed = SubResource( 2 )
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBox/HBoxTop"]
margin_left = 1264.0
margin_right = 1716.0
margin_bottom = 200.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center2" type="CenterContainer" parent="VBox/HBoxTop"]
margin_left = 1720.0
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="Create" type="TextureButton" parent="VBox/HBoxTop/Center2"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxMiddle" type="HBoxContainer" parent="VBox"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="CenterContainer" parent="VBox/HBoxMiddle"]
margin_right = 100.0
margin_bottom = 672.0
rect_min_size = Vector2( 100, 300 )

[node name="Left" type="TextureButton" parent="VBox/HBoxMiddle/Center"]
margin_top = 186.0
margin_right = 100.0
margin_bottom = 486.0
rect_min_size = Vector2( 100, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 13 )
expand = true

[node name="Worlds" type="HBoxContainer" parent="VBox/HBoxMiddle"]
margin_left = 104.0
margin_right = 1816.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center2" type="CenterContainer" parent="VBox/HBoxMiddle"]
margin_left = 1820.0
margin_right = 1920.0
margin_bottom = 672.0
rect_min_size = Vector2( 100, 300 )

[node name="Right" type="TextureButton" parent="VBox/HBoxMiddle/Center2"]
margin_top = 186.0
margin_right = 100.0
margin_bottom = 486.0
rect_min_size = Vector2( 100, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxBottom" type="HBoxContainer" parent="VBox"]
margin_top = 880.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 200 )

[node name="Center" type="CenterContainer" parent="VBox/HBoxBottom"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Upload" type="TextureButton" parent="VBox/HBoxBottom/Center"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="VBox/HBoxBottom"]
margin_left = 204.0
margin_right = 756.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center2" type="CenterContainer" parent="VBox/HBoxBottom"]
margin_left = 760.0
margin_right = 1160.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Option" type="TextureButton" parent="VBox/HBoxBottom/Center2"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Control2" type="Control" parent="VBox/HBoxBottom"]
margin_left = 1164.0
margin_right = 1716.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center3" type="CenterContainer" parent="VBox/HBoxBottom"]
margin_left = 1720.0
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Download" type="TextureButton" parent="VBox/HBoxBottom/Center3"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -269.0
margin_right = 381.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -61.1057
margin_top = 17.0731
margin_right = -61.1057
margin_bottom = 17.0731
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.8, 0.8, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="VBox/HBoxTop/Center/Delete" to="VBox" method="_on_delete_button_down"]
[connection signal="button_up" from="VBox/HBoxTop/Center/Delete" to="VBox" method="_on_delete_button_up"]
[connection signal="pressed" from="VBox/HBoxTop/Center/Delete" to="VBox" method="_on_delete_pressed"]
[connection signal="button_down" from="VBox/HBoxTop/Center2/Create" to="VBox" method="_on_create_button_down"]
[connection signal="button_up" from="VBox/HBoxTop/Center2/Create" to="VBox" method="_on_create_button_up"]
[connection signal="button_down" from="VBox/HBoxMiddle/Center/Left" to="VBox" method="_on_left_button_down"]
[connection signal="button_up" from="VBox/HBoxMiddle/Center/Left" to="VBox" method="_on_left_button_up"]
[connection signal="button_down" from="VBox/HBoxMiddle/Center2/Right" to="VBox" method="_on_right_button_down"]
[connection signal="button_up" from="VBox/HBoxMiddle/Center2/Right" to="VBox" method="_on_right_button_up"]
[connection signal="button_down" from="VBox/HBoxBottom/Center/Upload" to="VBox" method="_on_upload_button_down"]
[connection signal="button_up" from="VBox/HBoxBottom/Center/Upload" to="VBox" method="_on_upload_button_up"]
[connection signal="button_down" from="VBox/HBoxBottom/Center2/Option" to="VBox" method="_on_option_button_down"]
[connection signal="button_up" from="VBox/HBoxBottom/Center2/Option" to="VBox" method="_on_option_button_up"]
[connection signal="button_down" from="VBox/HBoxBottom/Center3/Download" to="VBox" method="_on_download_button_down"]
[connection signal="button_up" from="VBox/HBoxBottom/Center3/Download" to="VBox" method="_on_download_button_up"]
